Fixes language selector overlap (fixes #65)
* Change width for srcLangSelectors

* Try with calc CSS

* Use calc and subtract the width of swap Button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,7 @@ html[dir=rtl] #srcLanguages {
 
 #srcLangSelectors {
     z-index: 100;
+    width: calc(100% - 34px);
 }
 
 @media(min-width: 768px) {
